# CityApi

./: Dockerfile  GUIDE_INSTALL.md  INSTALL.md  RAPPORT.md  README.md  SETUP_DB_PR.md  app.py  docker-compose.yml  init.sql  prometheus.yml  pyproject.toml  run.py
.github/workflows/: cleanup-pr.yml  deploy-pr.yml  docker-publish.yml  lint.yml
app/: __init__.py  app.py
app/models/: city.py
app/routes/: city.py  health.py
docker/: docker-compose.yml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  app-pvc.yaml  db-deployment.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
kubernetes/: DATABASE.md  argo-cd-appset.yaml  argo-cd-pr-example.yaml  argo-cd.yaml  cluster-secret.yaml  cluster.yaml  database-prod.yaml  kustomization.yaml  namespace.yaml  test-pr-db.sh
kubernetes/base/: applicationset.yaml  argo-cd.yaml
kubernetes/base/helm/: Chart.yaml
kubernetes/base/helm/templates/: app-service.yaml  db-service.yaml
kubernetes/helm/: values-pr.yaml  values.yaml
kubernetes/helm/templates/: _helpers.tpl  app-deployment.yaml  app-ingress.yaml  app-pvc.yaml  app-service.yaml  db-config.yaml  db-deployment.yaml  db-postgresdatabase.yaml  db-pr-hooks.yaml  db-service.yaml  pg-pr-cluster.yaml  pg-prod.yaml
models/: city.py
routes/: city.py  health.py
static/: script.js  styles.css
templates/: index.html
tests/: test_health.py  test_insert_bd.py
